# internal/dto/requests/login_request.go
@@ -1,0 +1,6 @@
+package requests
+
+type LoginRequest struct {
+	UsernameOrEmail string `json:"username_or_email"`
+	Password        string `json:"password"`
+}
